# jetty_bazel_demo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  spawn_model.cc
resources/: A.gltf  A.stl  B.gltf  B.stl  E.gltf  E.stl  L.gltf  L.stl  Z.gltf  Z.stl  bazel.sdf
