"""
Jetty Demo client - MODULE.bazel

Learn more about Bazel Modules at https://bazel.build/external/overview
"""
module(
    name = "jetty_bazel_demo",
    version = "0.0.1",
    compatibility_level = 0,
)

# Override fmt version from gz-common build graph to circumvent compilation
# error on MacOS.
bazel_dep(name = "fmt", version = "11.2.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.1")

# Gazebo Dependencies
bazel_dep(name = "gz-common", version = "7.0.0-pre1")
bazel_dep(name = "gz-math", version = "9.0.0-pre1")
bazel_dep(name = "gz-msgs", version = "12.0.0-pre1")
bazel_dep(name = "gz-transport", version = "15.0.0-pre2")
bazel_dep(name = "gz-utils", version = "4.0.0-pre1")
